Updates for 2024 coursework.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,7 +10,7 @@
 <nav>
   <ul>
     <li>
-      <a href="patientList.html">View the Patient Name List</a>
+      <a href="patientList.html">View the Patient ID List</a>
     </li>
     <li>
       <a href="search.html">Search</a>
