--- a/src/main/webapp/search.html
+++ b/src/main/webapp/search.html
@@ -5,9 +5,20 @@
 </head>
 <body>
 <div class="main">
-  <h1>Search</h1>
+  <h2>Search</h2>
+  <a href="menu.html">Menu</a>
+<!--Search bar-->
   <form method="POST" action="/runsearch.html">
-    <input type="text" name="searchstring" placeholder="Enter search keyword here"/>
+    <label for="searchOptions"> Choose the data you want to search</label>
+    <select name = "searchOptions" id="searchOptions">
+      <option value="FIRST">First Name</option>
+      <option value="LAST">Last Name</option>
+      <option value="ID">ID</option>
+      <option value="CITY">City</option>
+      <option value="ZIP">ZIP Code</option>
+    </select>
+    <br>
+    <input type="text" name="searchstring" placeholder="Enter search keyword"/>
     <input type="submit" value="Search"/>
   </form>
 </div>
