Fixed Bugs, Enhanced readability

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Welcome to the Patient App</h1>
-<p>choose the file you want to read</p>
+<h2>Choose the file you want to read below</h2>
 <form action = "/menu.html">
     <label for = "fileOptions">Choose the file of patient number</label>
     <select name = "fileOptions" id = "fileOptions">
@@ -14,7 +14,7 @@
         <option value = "1000"> 1000 </option>
         <option value = "10000"> 10000 </option>
         <option value = "100000"> 100000 </option>
-    </select> <br>
+    </select>
     <input type="submit" value="Submit">
 </form>
 
