--- a/src/main/webapp/savefile.html
+++ b/src/main/webapp/savefile.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Save</h1>
-<a href = "menu.html">menu</a>
+<a href = "menu.html">Menu</a>
 <form action="saveNewFile.html">
     <label for="newFileName">Input the file name</label>
     <input type="text" id="newFileName" name="newFileName" placeholder="e.g. file.json, type file">
