--- a/src/main/webapp/search.html
+++ b/src/main/webapp/search.html
@@ -15,6 +15,7 @@
       <option value="LAST">Last Name</option>
       <option value="ID">ID</option>
       <option value="CITY">City</option>
+      <option value ="BIRTHPLACE">Birth Place</option>
       <option value="ZIP">ZIP Code</option>
     </select>
     <br>
