Changed pom.xml and some metadata.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Patient Data</title>
+  <title>WebNote Home</title>
 </head>
 <body>
-<h2>Welcome to the Patient Data App</h2>
+<h2>Welcome to the home of WebNote</h2>
 
 <nav>
   <ul>
