--- a/src/main/webapp/search.html
+++ b/src/main/webapp/search.html
@@ -1,12 +1,11 @@
-
 <html>
 <head>
-  <title>Patient Data App</title>
+  <title>Search Notes</title>
 </head>
 <body>
 <div class="main">
-  <h1>Search</h1>
-  <form method="POST" action="/runsearch.html">
+  <h1>Search Notes</h1>
+  <form method="POST" action="/searchNotes.html">
     <input type="text" name="searchstring" placeholder="Enter search keyword here"/>
     <input type="submit" value="Search"/>
   </form>
