--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>WebNote Home</title>
+    <meta charset="UTF-8">
+    <title>WebNote Home</title>
 </head>
 <body>
 <h2>Welcome to the home of WebNote</h2>
 
 <nav>
-  <ul>
-    <li>
-      <a href="patientList.html">View the Patient ID List</a>
-    </li>
-    <li>
-      <a href="search.html">Search</a>
-    </li>
-  </ul>
+    <ul>
+        <li>
+            <a href="noteList.html">View the Patient ID List</a>
+        </li>
+        <li>
+            <a href="searchNotes.html">Search</a>
+        </li>
+    </ul>
 </nav>
 
 </body>
