search is somehow working

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,10 +10,10 @@
 <nav>
     <ul>
         <li>
-            <a href="noteList.html">View the Patient ID List</a>
+            <a href="noteList.html">View the note list</a>
         </li>
         <li>
-            <a href="searchNotes.html">Search</a>
+            <a href="search.html">Search</a>
         </li>
     </ul>
 </nav>
