--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,6 +15,9 @@
         <li>
             <a href="search.html">Search</a>
         </li>
+        <li>
+            <a href="createNote.html">Create a new note</a>
+        </li>
     </ul>
 </nav>
 
