Add CSS formatting to improve website presentation

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,21 +5,22 @@
     <title>WebNote Home</title>
 </head>
 <body>
-<h2>Welcome to the home of WebNote</h2>
+<div class="main">
+    <h2>Welcome to the home of WebNote</h2>
 
-<nav>
-    <ul>
-        <li>
-            <a href="noteList.html">View the note list</a>
-        </li>
-        <li>
-            <a href="search.html">Search</a>
-        </li>
-        <li>
-            <a href="createNote.html">Create a new note</a>
-        </li>
-    </ul>
-</nav>
-
+    <nav>
+        <ul>
+            <li>
+                <a href="noteList.html">View the note list</a>
+            </li>
+            <li>
+                <a href="search.html">Search</a>
+            </li>
+            <li>
+                <a href="createNote.html">Create a new note</a>
+            </li>
+        </ul>
+    </nav>
+</div>
 </body>
 </html>
