Enhanced error handling, request validation, and forwarding in servlets. Improved JSPs to display meaningful messages. Updated URLs in `index.html` and `search.html` for consistency. Upgraded project to version 1.3 and Java 25, removing redundant Maven plugins. Richly documented `Main.java` for better maintainability.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,7 +10,7 @@
 <nav>
   <ul>
     <li>
-      <a href="patientList.html">View the Patient ID List</a>
+      <a href="patientList">View the Patient ID List</a>
     </li>
     <li>
       <a href="search.html">Search</a>
