--- a/src/main/webapp/search.html
+++ b/src/main/webapp/search.html
@@ -6,7 +6,7 @@
 <body>
 <div class="main">
   <h1>Search</h1>
-  <form method="POST" action="/runsearch.html">
+  <form method="GET" action="/runsearch">
     <input type="text" name="searchstring" placeholder="Enter search keyword here"/>
     <input type="submit" value="Search"/>
   </form>
